classDiagram

    AuthUsers <|-- Profiles
    AuthUsers <|-- JobApplications
    JobApplications <|-- Interviews
    JobApplications <|-- ApplicationNotes
    AuthUsers <|-- Documents
    AuthUsers <|-- UserQuestionProgress
    Questions <|-- UserQuestionProgress


    class AuthUsers {
    }


    class Profiles {
      +id : UUID
      +full_name : TEXT
      +created_at : TIMESTAMP
      +updated_at : TIMESTAMP
    }


    class JobApplications {
      +id : BIGINT
      +user_id : UUID
      +company_name : TEXT
      +position_title : TEXT
      +location : TEXT
      +status : TEXT
      +date_applied : DATE
      +response_date : DATE
      +created_at : TIMESTAMP
      +updated_at : TIMESTAMP
    }


    class Interviews {
      +id : BIGINT
      +application_id : BIGINT
      +interview_date : TIMESTAMP
      +interview_type : TEXT
      +location : TEXT
      +status : TEXT
      +notes : TEXT
      +created_at : TIMESTAMP
      +updated_at : TIMESTAMP
    }


    class ApplicationNotes {
      +id : BIGINT
      +application_id : BIGINT
      +note : TEXT
      +created_at : TIMESTAMP
    }


    class Documents {
      +id : BIGINT
      +user_id : UUID
      +doc_type : TEXT
      +title : TEXT
      +file_url : TEXT
      +created_at : TIMESTAMP
    }


    class Questions {
      +id : BIGINT
      +title : TEXT
      +difficulty : TEXT
      +created_at : TIMESTAMP
    }

    class UserQuestionProgress {
      +user_id : UUID
      +question_id : BIGINT
      +status : TEXT
      +times_solved : INT
      +last_solved_at : TIMESTAMP
      +created_at : TIMESTAMP
      +updated_at : TIMESTAMP
    }
